--- a/src/assets/icons/img/manifest.json
+++ b/src/assets/icons/img/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "ADAMANT Explorer",
+    "name": "Grand50 Explorer",
     "icons": [
     {
       "src": "/img/android-chrome-36x36.png",
