--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "adamant-explorer",
+  "name": "grand50-explorer",
   "version": "1.3.0",
-  "description": "ADAMANT blockchain explorer",
+  "description": "GRAND50 blockchain explorer",
   "repository": {
     "type": "git",
     "url": "git@github.com:zyuhel/adamant-explorer.git"
@@ -15,7 +15,7 @@
     "e2e-test": "protractor protractor.conf.js",
     "start": "npm run copy-files && webpack -w",
     "validate": "webpack-validator webpack.config.js",
-    "copy-files": "cp -r ./src/assets/img/favicon.ico ./src/index.html ./src/assets/img/leaflet ./src/assets/icons/img ./src/assets/icons/adm-qr-invert.png ./public",
+    "copy-files": "cp -r ./src/assets/img/favicon.ico ./src/index.html ./src/assets/img/leaflet ./src/assets/icons/img ./src/assets/icons/g50-qr-invert.png ./public",
     "build": "npm run copy-files && webpack",
     "build:prod": "webpack --env.prod"
   },
